# early_repayment_calculator

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: alphabank.rs  alphabankexported.rs  arguments.rs  ingbank.rs  main.rs  table.rs
