[package]
name = "calculator_rambursare_anticipata"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"

[dependencies]
chrono = "0.4.38"
colored = "2.1.0"
pdf-extract = "0.7.9"
walkdir = "2.3.1"
press-btn-continue = "0.2.0"
clap = { version = "4.5.17", features = ["derive"] }
strum = { version = "0.26.3", features = ["derive"] }
